/* Definitions */ enhance formatting markup <傅#37971767>

--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -27,12 +27,17 @@
 }}
 
 ===Definitions===
+====Noun====
+{{zh-noun}}
 # [[tutor]], [[teacher]]
-# [[assist]] (or perhaps [[enhance]])
-:''Manshu'' (Tang Dynasty), chapter 4.
-::箭鏃傅毒藥
-:::''Arrowheads were laced with poison.''
 # a [[surname]]
+====Verb====
+{{zh-verb}}
+# [[assist]] (or perhaps more broadly [[enhance]], [[bolster]], etc.)
+#:''Manshu'' (Tang Dynasty), chapter 4.
+#::箭鏃'''傅'''毒藥
+#::jiàn​zú​ '''fù''' dú​yào​​
+#:::''Arrowheads were laced with poison.''
 
 ----
 
