--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -26,12 +26,12 @@
 |cat=n,v,pn
 }}
 
-===Definitions===
-====Noun====
+===Noun===
 {{zh-noun}}
 # [[tutor]], [[teacher]]
-# a [[surname]]
-====Verb====
+# {{surname|lang=zh}}
+
+===Verb===
 {{zh-verb}}
 # [[assist]] (or perhaps more broadly [[enhance]], [[bolster]], etc.)
 #:''Manshu'' (Tang Dynasty), chapter 4.
