--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -40,7 +40,7 @@
 #:::''Arrowheads '''were laced with''' poison.''
 #::[[繡]][[面]][[蠻]][[初]][[生]][[後]][[出]][[月]]，[[以]][[針]][[刺]][[面]][[上]]，[[以]][[青]][[黛]]'''傅'''[[之]]。
 #::xiù​miàn​mán​ chū​shēng​ hòu​ chū​yuè​, yǐ​ zhēn​cì​ miàn​ shàng​, yǐ​ qīng​dài​ '''fù​''' zhī​
-#:::The ''Face Tattoo Barbarians'' are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.
+#:::''The ''Face Tattoo Barbarians'' are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.''
 ----
 
 ==Japanese==
