--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -37,7 +37,7 @@
 # to [[assist]] (or perhaps more broadly [[enhance]], [[bolster]], etc.)
 #* '''Tang Dynasty''', {{w|Fan Chuo (Tang dynasty)|Fan Chuo}}, ''[[s:Translation:Manshu|Manshu]]'', [[s:Translation:Manshu/Chapter_4|chapter 4]]
 #*: {{zh-usex|箭鏃 傅 毒藥|arrowheads '''laced with''' poison|CL}}
-#*: {{zh-usex|繡面蠻 初生 後 出月，以 針刺 面-上，以 青黛 '''傅''' 之。|The Face Tattoo Barbarians are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.|CL}}
+#*: {{zh-usex|繡面蠻 初生 後 出月，以 針刺 面-上，以 青黛 傅 之。|The Face Tattoo Barbarians are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.|CL}}
 
 ----
 
