--- a/en/倨/倨.11040.wikitext
+++ b/en/倨/倨.11040.wikitext
@@ -10,12 +10,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=geui3}}
+===Pronunciation===
+{{zh-pron
+|m=jù
+|c=geoi3
+|h=pfs=
+|md=
+|mn=kù
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+====Compounds====
+* {{zh-l|倨傲}}
 
 ----
 
@@ -37,15 +54,6 @@
 {{ko-hanja|hangeul=거|rv=geo|mr=kŏ}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 [[fr:倨]]
 [[ko:倨]]
