t+am:[[ጨጓራ]] ([[WT:EDIT|Assisted]]) <stomach#37978657>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -54,7 +54,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Afar: {{t-needed|aa}}
 * Afrikaans: {{t|af|maag}}
 * Albanian: {{t+|sq|stomak}}
-* Amharic: {{t-needed|am}}
+* Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}
 *: Egyptian Arabic: {{t|arz|معدة|f|tr=meʕda|sc=Arab}}
 * Aragonese: {{t-needed|an}}
