--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -92,12 +92,13 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Korean: {{t+|ko|항구|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
 * Ladin: {{t|lld|port|m}}
-* Lao: {{t|lo|ທ່າ|sc=Laoo}}, {{t+|lo|ທ່າເຮືອ|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t|lo|ທ່າ|sc=Laoo}}, {{t+|lo|ທ່າເຮືອ|sc=Laoo}}
 * Latgalian: {{t|ltg|ūsta|f}}
 * Latin: {{t|la|portus|m}}
 * Latvian: {{t+|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
+* Lü: {{t|khb|ᦑᦱᧉᦵᦣᦲ|sc=Talu}}
 * Macedonian: {{t|mk|приста́ниште|n|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
 * Malayalam: {{t+|ml|തുറമുഖം|sc=Mlym}}
