t+khb:[[ᦇᦱᧄ]] ([[WT:EDIT|Assisted]]) <beautiful#37981275>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -123,6 +123,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Lithuanian: {{t+|lt|gražus}}
 * Lojban: {{t|jbo|melbi}}
 * Low German: {{t+|nds|schöön}}, {{t|nds|scheun}}
+* Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
