--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -2,9 +2,10 @@
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=60430|canj=AK|ids=⿱日大}}
-====Definition====
+
 # vast and boundless sky
-=====References=====
+
+====References====
 * {{Han ref|kx=0490.070|dkj=13753|dj=0851.080|hdz=21487.050|uh=65F2|ud=26098|bh=CAFB|bd=51963}}
 
 ----
