--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -24,12 +24,14 @@
 }}
 
 ===Definitions===
+{{zh-hanzi}}
+
 # [[daylight]]
 # [[sunlight]]
 
 ====References====
-*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-*[http://www.zdic.net/z/1b/js/65F2.htm zdic.net (Han Dian)]
+* {{q|Cantonese}} [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+* [http://www.zdic.net/z/1b/js/65F2.htm zdic.net (Han Dian)]
 
 ===Pronunciation 2===
 {{zh-pron
@@ -39,6 +41,8 @@
 }}
 
 ===Definitions===
+{{zh-hanzi}}
+
 # [[big]], [[great]], [[vast]], [[large]], [[high]]
 
 ----
