--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -19,31 +19,31 @@
 |c=toi4
 |mc=
 |oc=
-|ma=
+|ma=y
 |cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# [[daylight]]
-# [[sunlight]]
-
-====References====
-* {{q|Cantonese}} [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-* [http://www.zdic.net/z/1b/js/65F2.htm zdic.net (Han Dian)]
+# {{lb|zh|obsolete}} [[daylight]]; [[sunlight]]
 
 ===Pronunciation 2===
 {{zh-pron
-|m=yīng
+|m=yǐng
 |c=
 |cat=a
 }}
+<!-- Unihan is probably wrong. yǐng comes from the Kangxi Dictionary -->
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# [[big]], [[great]], [[vast]], [[large]], [[high]]
+# {{lb|zh|obsolete}} [[big]], [[great]], [[vast]], [[large]], [[high]]
+
+===References===
+* {{q|Cantonese}} [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+* [http://www.zdic.net/z/1b/js/65F2.htm zdic.net (Han Dian)]
 
 ----
 
