--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -11,12 +11,27 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ping4]]|y=ping4}}
+===Pronunciation===
+{{zh-pron
+|m=píng
+|c=ping4
+|h=
+|mn=pêⁿ/pîⁿ/phêⁿ/phîⁿ/phiâⁿ/phêng
+|mn_note=phêng - literary (others vernacular)
+|w=
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+====Noun====
+# a traditional unit of areal measure equal to a square six [[尺]] (''chhioh'') on each side, or about 3.306 square meters, roughly 35.57 square feet
+
+====References====
+* (''Min Nan'') {{thcwd|3717}}
 
 ----
 
@@ -65,28 +80,6 @@ Although the reading is different, this areal measurement meaning for {{lang|ja|
 
 # [[pyeong]], a traditional unit of measurement
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[píng]] ([[ping2]])|wg=p'ing<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
-# a traditional measurement of area equal to about 3.306 square meters, roughly 35.57 square feet
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=phîng (phing<sup>5</sup>), pênn (penn<sup>5</sup>), pînn (pinn<sup>5</sup>), phênn (phenn<sup>5</sup>), phînn (phinn<sup>5</sup>), phiânn (phiann<sup>5</sup>)}}
-
-# unit of areal measure equivalent to a square six [[尺]] (''chhioh'') on each side
-
-====References====
-* (''Min Nan'') {{thcwd|3717}}
 
 ----
 
