/* Noun */ Derived terms <坪#37984548>

--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -30,6 +30,9 @@
 ====Noun====
 # a traditional unit of areal measure equal to a square six [[尺]] (''chhioh'') on each side, or about 3.306 square meters, roughly 35.57 square feet
 
+=====Derived terms=====
+* {{zh-l|坪數}}
+
 ====References====
 * (''Min Nan'') {{thcwd|3717}}
 
