--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -8,7 +8,7 @@
 ===Proper noun===
 {{en-proper noun|head=the [[Czech]] [[republic|Republic]]}}
 
-# A [[country]] in [[Central Europe]]. Official short-form name: [[Czechia]].
+# A [[country]] in [[Central Europe]].
 
 ====Synonyms====
 * [[CR]] {{qualifier|abbreviation}}
@@ -144,7 +144,7 @@
 
 [[Category:en:Countries]]
 [[Category:en:Countries of Europe]]
-[[Category:en:Czechia]]
+[[Category:en:Czech Republic]]
 
 [[ar:Czech Republic]]
 [[ast:Czech Republic]]
