--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -38,7 +38,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 
 =====Derived terms=====
 {{der-top}}
-* [[airport]], [[seaport]], [[spaceport]]
+* [[airport]], [[carport]], [[seaport]], [[spaceport]]
 * [[any port in a storm]]
 * [[Newport]]
 {{der-mid}}
