--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -72,6 +72,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 
 {{trans-top|religious painting}}
 * Albanian: {{t|sq|ikona|f}}
+* Arabic: {{t|ar|أَيْقونة |f|tr='ayquna}}
 * Armenian: {{t|hy|սրբապատկեր}}, {{t+|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Azeri: {{t|az|ikona}}
