--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -25,7 +25,7 @@
 |h=pfs=thi
 |md=dê
 |mn=tè/tē/tōe/tī
-|mn_note=tē/tōe/tī are literary
+|mn_note=tè - vernacular; tē/tōe/tī - literary (tē - Yilan, Tainan, Kaohsiung. terē - Sanxia)
 |w=3di
 |mc=y
 |oc=y
