/* Occitan */ pro <libre#38011215>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -138,7 +138,7 @@ From {{etyl|la|nrf}} {{m|la|līber||free}}.
 ==Occitan==
 
 ===Etymology===
-From {{etyl|la|oc}} {{m|la|liber}}
+From {{etyl|la|oc}} {{m|la|liber}}.
 
 ===Pronunciation===
 * {{IPA|[ˈliβɾe]|lang=oc}}
@@ -147,6 +147,22 @@ From {{etyl|la|oc}} {{m|la|liber}}
 {{oc-noun|m}}
 
 # [[book]]
+
+----
+
+==Old Provençal==
+
+===Etymology===
+{{der|pro|la|libre}}. [[Gallo-Romance]] cognate with {{etyl|fro|-}} {{m|fro|livre}}.
+
+===Noun===
+{{pro-noun|m}}
+
+# [[book]]
+
+====Descendants====
+* Catalan: {{l|ca|llibre}}
+* Occitan: {{l|oc|libre}}
 
 ----
 
