/* Derived terms */ ++; sort <port#38012519>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -38,12 +38,19 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 
 =====Derived terms=====
 {{der-top}}
-* [[airport]], [[carport]], [[seaport]], [[spaceport]]
+* [[airport]]
 * [[any port in a storm]]
+* [[carport]]
+* [[first port of call]]
 * [[Newport]]
-{{der-mid}}
 * [[outport]]
-* [[port authority]], [[port of call]], [[first port of call]]
+{{der-mid}}
+* [[port authority]]
+* [[port of call]]
+* [[port of entry]]
+* [[Port of Spain]]
+* [[seaport]]
+* [[spaceport]]
 {{der-bottom}}
 
 =====Translations=====
