t+lo:[[ອະເມລິກາ]] t+lo:[[ອາເມລິກາ]] t-balance t+km:[[អាមេរិក]] t+hi:[[अमेरिका]] t+ar:[[أمريكا]] t+fa:[[آمریکا]] ([[WT:EDIT|Assisted]]) <United States of America#38015997>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -28,7 +28,7 @@
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа|sc=Cyrl}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}
 * Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t+|sq|SHBA}}
-* Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}
+* Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
 *: Assyrian Neo-Aramaic: {{t|aii|ܐܬܪܘܬܐ ܡܚܝܕܐ ܕܐܡܪܝܟܐ|sc=Syrc}}
 * Armenian: {{t|hy|Ամերիկայի Միացյալ Նահանգներ}}, {{t+|hy|Ամերիկա}}
@@ -63,7 +63,7 @@
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
 * Hiligaynon: {{t-needed|hil}}
-* Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}
+* Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m|sc=Deva}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
 * Icelandic: {{t|is|Bandaríka|n}}
 * Indonesian: {{t|id|Amerika Serikat}}
@@ -75,14 +75,14 @@
 * Kannada: {{t|kn|ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನ|sc=Knda}}
 * Kashmiri: {{t|ks|संयुक्त राज्‍य अमेरिका|tr=sanyukta rājya amerikā|sc=ks-Arab}}
 * Kazakh: {{t|kk|Америка Құрама Штаттары|sc=Cyrl}}
-* Khmer: {{t|km|សហរដ្ឋអាមេរិក|tr=sahā rōŭt āmērik|sc=Khmr}}
+* Khmer: {{t|km|សហរដ្ឋអាមេរិក|tr=sahā rōŭt āmērik|sc=Khmr}}, {{t|km|អាមេរិក|tr=’aameirik|sc=Khmr}}
 * Korean: {{t|ko|^미국|sc=Kore}} ({{t+|ko|美國|sc=Kore}}), {{t|ko|^아메리카 합중국|sc=Kore}}, {{t|ko|^미합중국|sc=Kore}} ({{t|ko|美合衆國|sc=Kore}})
 * Kurdish:
 *: Sorani: {{t|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|sc=Cyrl}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
+* Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}, {{t|lo|ອະເມລິກາ|sc=Laoo}}, {{t|lo|ອາເມລິກາ|sc=Laoo}}
 {{trans-mid}}
-* Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t+|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
@@ -105,7 +105,7 @@
 * Nahuatl: {{t|nah|Tlacetilīlli Tlahtohcāyōtl Ixachitlān}}
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ|sc=Cyrl}}
 * Palauan: {{t|pau|Merikel}}
-* Persian: {{t|fa|ایالات متحده آمریکا|tr=eyâlât-e mottahede-ye âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}
+* Persian: {{t|fa|ایالات متحده آمریکا|tr=eyâlât-e mottahede-ye âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}, {{t+|fa|آمریکا|tr=âmrikâ|sc=fa-Arab}}
 * Plains Cree: {{t|crk|kihci-môhkomân-askîhk}}
 * Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}
 * Portuguese: {{t+|pt|Estados Unidos da América|m-p}}, {{t+|pt|Estados Unidos|m-p}}, {{t+|pt|EUA}}
