--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -19,7 +19,7 @@
 
 ===Glyph origin===
 {{Han etyl}}
-{{Han compound|早|正|ls=ic}}, logic of compound unclear. Older form was {{zh-l|*昰}}, and ''{{w|Shuowen}}'' considers this a compound of [[日]] + [[正]] (i.e. "right" as the upright sun).
+{{Han compound|早|正|ls=ic}}, logic of compound unclear. It has been suggested that [[早]] looks like a spoon, so [[是]] may have been the original character for [[匙]]. As early as in late bronze inscriptions, [[早]] was replaced with [[日]] to give {{zh-l|*昰}}, which carried over to the small seal script, and ''{{w|Shuowen}}'' considers this a compound of [[日]] + [[正]] (i.e. "right" as the upright sun).
 
 ===Etymology===
 "This [an independent pronoun] > be right, correct, to be, so". From {{der|zh|sit-pro|*m-daj ~ *m-di||that; this}}. Cognate with {{cog|bo|དེ||that}}, {{cog|kac|dai}}, {{m|kac|ndai||this}}.
