--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -88,6 +88,9 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的}} after the 
 ====Compounds====
 {{zh-der|是不是|是以|是否|是啥說啥|是故|是的|是非|是非不分|是非分明|是非曲直|是非自有公論|是非莫辨|乃是|也就是|事實求是|事求是|但是|便是|倒是|值得注意的是|假假若是|光是|凡是|利是|原因是|只是|可不是|可是|多得是|如是|實事求是|尤其是|就是|或是|於是|既是|有的是|橫是|正是|比比皆是|求是|為的是|煞是|獨行其是|盡是|硬是|確是|積非成是|算是|總是|老是|而是|自以為是|自行其是|若是|莫不是|莫衷一是|要不是|要是|賠不是|還是|那倒是|那是|重要的是|雖是}}
 
+===References===
+* {{R:yue:Hanzi}}
+
 {{zh-cat|Beginning}}
 
 ----
