t+km:[[វត្ថុ]] ([[WT:EDIT|Assisted]]) <substance#38025146>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -72,6 +72,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Irish: {{t|ga|mianach|m}}
 * Italian: {{t+|it|sostanza|f}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
+* Khmer: {{t+|km|វត្ថុ|tr=voattʰo’|sc=Khmr}}
 * Korean: {{t+|ko|물질|sc=Kore}}
 * Latin: {{t|la|substantia|f}}
 * Latvian: {{t|lv|viela|f}}
