--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -29,7 +29,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
-* {{sense|State of Israel}} the Jewish State, the State of Israel
+* {{sense|State of Israel}} the Jewish State, the [[State of Israel]], [[Zionistan]]
 * {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the Land of Israel, the [[Levant]], [[Palestine]]
 * {{sense|ancient kingdom}} [[Ephraim]]
 * {{sense|the Jews}} the Children of Israel
