/* Pronunciation */ rfap British <New Zealand#38025851>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -8,6 +8,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * {{enPR|nyoo͞-zē'lənd}}, {{IPA|/ˈnjuː ˈziː.l(ə)nd/|lang=en}}
 * {{a|US}} {{enPR|noo͞-zē'lənd}}, {{IPA|/ˈnu ˈzi.lənd/|lang=en}}
 * {{audio|en-us-New Zealand.ogg|Audio (US)|lang=en}}
+{{rfap|en|British}}
 
 ===Proper noun===
 {{en-proper noun|head=[[new|New]] [[Zealand]]}}
