/* Noun */ # {{lb|en|cycling}} The situation where a lone [[rider]] or small group of riders closes the space between them and the rider or group in front. <bridge#38029145>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -60,6 +60,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 ## A day falling between two [[public holiday]]s and consequently designated as an additional holiday.
 # {{label|en|electronics}} Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
 # A low wall or vertical partition in the fire chamber of a furnace, for deflecting flame, etc.; a [[bridge wall]].
+# {{lb|en|cycling}} The situation where a lone [[rider]] or small group of riders closes the space between them and the rider or group in front.
 # A solid crust of undissolved salt in a [[water softener]].
 
 =====Derived terms=====
