--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -1,5 +1,6 @@
 {{also|伪|僞}}
 ==Translingual==
+{{Han simplified forms|偽|偽|伪}}
 
 ===Etymology===
 {{Han compound|亻|為|t1=man|t2=to make|ls=ic}}, originally "artificial".
