it's obviously an improvement, the Latin word is a correct translation, the derived terms are derived from this etc. <Israel#38031723>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -2,6 +2,9 @@
 ==English==
 {{wikipedia}}
 
+===Alternative forms===
+* {{l|en|Isr.}}
+
 ===Pronunciation===
 * {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/|lang=en}}.
 *: {{qualifier|In singing also}} {{enPR|ĭzʹrīĕl}}; {{IPA|/ˈɪzraɪɛl/|lang=en}}
@@ -29,13 +32,23 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
-* {{sense|State of Israel}} the [[State of Israel]]
-* {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
+* {{sense|State of Israel}} the [[State of Israel]], [[Jewsrael]], [[Zionistan]]
+* {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the [[Land of Israel]], [[Palestine]], [[Zion]]
 * {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s
 
 ====Derived terms====
+* [[Israel firster]]
+* [[Israelian]]
 * [[Israeli]]
 * [[Israelite]]
+* [[Israelophile]]
+* [[Israelophilia]]
+* [[Israelophilic]]
+* [[Israelophobe]]
+* [[Israelophobia]]
+* [[Israelophobic]]
+* [[Israhell]]
+* [[Isratine]]
 * [[Jewsrael]]
 
 ====Translations====
@@ -166,9 +179,11 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 *: Min Dong: {{t|cdo|以色列|tr=Ī-sáik-liĕk|sc=Hani}}
 *: Min Nan: {{t|nan|以色列|tr=Í-sek-lia̍t}}, {{t|nan|I-su-la-el}}
 * French: {{t+|fr|Israël|m}}
-{{trans-mid}}
+* German: {{t|de|Israel}}
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'el}}
+{{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+* Latin: {{t|la|Israel|m}}
 * Maore Comorian: {{t|swb|Israila}}
 * Portuguese: {{t+|pt|Israel|m}}
 * Romanian: {{t+|ro|Israel|m}}
@@ -270,6 +285,11 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 {{de-proper noun|n}}
 
 # {{l|en|Israel}}
+#* Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
+#*: Er sprach: Du sollst nicht mehr Jakob heißen, sondern '''Israel'''; denn du hast mit Gott und mit Menschen gekämpft und bist obgelegen.
+
+====Synonyms====
+* {{sense|State of Israel}} {{l|de|Staat Israel}} {{qual|official name}}
 
 ====Derived terms====
 * {{l|de|israelisch}}
@@ -277,7 +297,11 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{l|de|Israelit}}
 * {{l|de|Israeli}}
 * {{l|de|israelisieren}}
+* {{l|de|israelfeindlich}}
+* {{l|de|israelfreundlich}}
 * {{l|de|israelkritisch}}
+* {{l|de|antiisraelisch}}
+* {{l|de|proisraelisch}}
 
 [[Category:de:Countries of Asia]]
 
@@ -296,7 +320,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Derived terms====
 * {{l|la|Isrāēlīta}}, {{l|la|Isrāēlītēs}}
-* {{l|la|Isrāēlīticus}}
+* {{l|la|isrāēlīticus}}, {{l|la|Isrāēlīticus}}
 
 ====Inflection====
 {{la-decl-3rd|num=sg|Isrāēl|Isrāēl}}
@@ -308,6 +332,8 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Inflection====
 {{la-decl-3rd|num=sg|Isrāēl|Isrāēl}}
+
+[[Category:la:Countries of Asia]]
 
 ----
 
