--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -33,7 +33,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Synonyms====
 * {{sense|State of Israel}} the [[State of Israel]], [[Jewsrael]] {{q|derogatory}}, [[Zionistan]] {{q|derogatory}}
-* {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Zion]], [[Canaan]]
+* {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], the [[Land of Zion]], [[Canaan]]
 * {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s
 
 ====Derived terms====
