--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|Isr.}}
+* {{l|en|Isr.}} {{qual|abbreviation}}
 
 ===Pronunciation===
 * {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/|lang=en}}.
@@ -32,7 +32,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
-* {{sense|State of Israel}} the [[State of Israel]], [[Jewsrael]] {{q|derogatory}}, [[Zionistan]] {{q|derogatory}}
+* {{sense|State of Israel}} the [[State of Israel]] {{q|official name}}, [[Jewsrael]] {{q|derogatory}}, [[Zionistan]] {{q|derogatory}}
 * {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
 * {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s
 
@@ -40,7 +40,6 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * [[Israel firster]]
 * [[Israelian]]
 * [[Israeli]]
-* [[Israelite]]
 * [[Israelophile]]
 * [[Israelophilia]]
 * [[Israelophilic]]
@@ -50,6 +49,11 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * [[Israhell]]
 * [[Isratine]]
 * [[Jewsrael]]
+
+====Related terms====
+* [[Israelite]]
+* [[Israelitic]]
+* [[Israelitish]]
 
 ====Translations====
 {{trans-top|the state}}
@@ -222,6 +226,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * [[serial#English|serial]]
 
 [[Category:en:Countries]]
+[[Category:en:Israel]]
 [[Category:en:Individuals]]
 
 ----
@@ -268,6 +273,9 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 ====Declension====
 {{fi-decl-risti|n=sg|Israel|||a|i=0}}
 
+====Derived terms====
+* {{l|fi|israelilainen}}
+
 ===Anagrams===
 * [[laseri#Finnish|laseri]]
 
@@ -285,6 +293,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 {{de-proper noun|n}}
 
 # {{l|en|Israel}}
+# {{l|en|Israel}}, another name of the patriarch [[Jacob]]
 #* Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
 #*: Er sprach: Du sollst nicht mehr Jakob heißen, sondern '''Israel'''; denn du hast mit Gott und mit Menschen gekämpft und bist obgelegen.
 
@@ -293,8 +302,6 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Derived terms====
 * {{l|de|israelisch}}
-* {{l|de|israelitisch}}
-* {{l|de|Israelit}}
 * {{l|de|Israeli}}
 * {{l|de|israelisieren}}
 * {{l|de|israelfeindlich}}
@@ -302,6 +309,10 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{l|de|israelkritisch}}
 * {{l|de|antiisraelisch}}
 * {{l|de|proisraelisch}}
+
+====Related terms====
+* {{l|de|Israelit}}
+* {{l|de|israelitisch}}
 
 [[Category:de:Countries of Asia]]
 
@@ -311,12 +322,15 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ===Alternative forms===
 * {{l|la|Isrāhēl}}
+* {{l|la|Israël}}
 
 ===Proper noun===
 {{la-proper noun|Isrāēl|g=m|indecl=1}}<br/>
 {{la-proper noun|Isrāēl|Israelis|Isrāēlis|m|third}}
 
 # {{l|en|Israel}}, another name of the patriarch [[Jacob]]
+#* Nova Vulgata, Genesis 32, 29:
+#*: At ille: “ Nequaquam, inquit, Iacob amplius appellabitur nomen tuum, sed '''Israel''': quoniam certasti cum Deo et cum hominibus et praevaluisti! ”. 
 
 ====Derived terms====
 * {{l|la|Isrāēlīta}}, {{l|la|Isrāēlītēs}}
@@ -349,6 +363,10 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{l-nb|israeler}}
 * {{l-nb|israelsk}}, {{l-nn|israelsk}}
 
+====Related terms====
+* {{l-nb|israelitt}}, {{l-nn|israelitt}}
+* {{l-nb|israelittisk}}, {{l-nn|israelittisk}}
+
 [[Category:no:Countries]]
 
 ----
@@ -370,6 +388,10 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 # {{place|pt|country|in|contregion/the Middle East|continent/Asia|t1=Israel}}
 # {{given name|male|lang=pt}}
 
+====Related terms====
+* {{l|pt|israelita}}
+* {{l|pt|israelense}}
+
 ----
 
 ==Romanian==
@@ -389,7 +411,7 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 ====Declension====
 {{ro-noun-n|n=sg}}
 
-[[Category:ro:Countries]]
+[[Category:ro:Countries of Asia]]
 
 ----
 
@@ -401,12 +423,10 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 
 # {{l|en|Israel}}
 # [[Jacob]]
+#* {{RQ:Santa Biblia|Genesis|32|28}}
+#*: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
 
-====Quotations====
-* {{RQ:Santa Biblia|Génesis|32|28}}
-*: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
-
-[[Category:es:Countries]]
+[[Category:es:Countries of Asia]]
 
 ----
 
@@ -418,8 +438,11 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 
 # {{l|en|Israel}}
 
-[[Category:sv:Countries]]
-[[Category:en:Israel]]
+====Related terms====
+* {{l|sv|israel}}
+* {{l|sv|israelit}}
+
+[[Category:sv:Countries of Asia]]
 
 [[ar:Israel]]
 [[ast:Israel]]
