--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -225,7 +225,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * [[sailer#English|sailer]]
 * [[serial#English|serial]]
 
-[[Category:en:Countries]]
+[[Category:en:Countries of Asia]]
 [[Category:en:Israel]]
 [[Category:en:Individuals]]
 
@@ -284,6 +284,9 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 ----
 
 ==German==
+
+===Alternative forms===
+* {{l|de|Israël}} {{qual|obsolete}}
 
 ===Pronunciation===
 * {{IPA|/ˈɪsʀaeːl/|lang=de}}
@@ -425,6 +428,9 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 # [[Jacob]]
 #* {{RQ:Santa Biblia|Genesis|32|28}}
 #*: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
+
+====Related terms====
+* {{l|es|israelita}}
 
 [[Category:es:Countries of Asia]]
 
