--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -165,6 +165,7 @@ From {{etyl|enm|en}} {{m|enm|counten}}, from {{etyl|xno|en}} {{m|fro|conter}}, f
 * Icelandic: {{t|is|skipta máli}}, {{t+|is|telja|alt=teljast með}}
 * Italian: {{t+|it|contare}}
 * Macedonian: {{t|mk|се [[важи]]}}
+* Norwegian: {{t|no|regnes}}
 * Polish: {{t+|pl|liczyć się}}
 * Portuguese: {{t+|pt|valer}}, {{t+|pt|contar}}, {{t+|pt|importar}}
 * Russian: {{t+|ru|счита́ться}}
