--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -166,6 +166,7 @@ From {{etyl|enm|en}} {{m|enm|counten}}, from {{etyl|xno|en}} {{m|fro|conter}}, f
 * Italian: {{t+|it|contare}}
 * Macedonian: {{t|mk|се [[важи]]}}
 * Norwegian: {{t|no|regnes}}
+*: Nynorsk: {{t+|nn|telje}}
 * Polish: {{t+|pl|liczyć się}}
 * Portuguese: {{t+|pt|valer}}, {{t+|pt|contar}}, {{t+|pt|importar}}
 * Russian: {{t+|ru|счита́ться}}
