/* Translations */ <United States of America#38037364>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -96,7 +96,7 @@
 * Marathi: {{t|mr|अमेरिकेची संयुक्त संस्थाने|sc=Deva}}
 * Mongolian: {{t+|mn|Америкийн Нэгдсэн Улс|sc=Cyrl}}
 * Maori: {{t|mi|Hononga-o-Amerika}}
-* Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}, {{t|nv|Kéyah ashdladiingo hahoodzooígíí}}
+* Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}, {{t|nv|Kéyah ashdladiingo bił hahoodzooígíí}}
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * Norman: {{t|nrf|Êtats Unnis d'Améthique|m-p}}
 * Northern Sami: {{t|se|Amerihká ovttastuvvan stáhtat}}
