--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -52,25 +52,25 @@
 {{der3
 |[[健步]]
 |[[健存]]
-|[[健儿]]
-|[[健将]]
+|[[健兒]]
+|[[健將]]
 |[[健捷]]
 |[[健康]]
 |[[健朗]]
 |[[健美]]
 |[[健美操]]
-|[[健美裤]]
-|[[健美运动]]
+|[[健美褲]]
+|[[健美運動]]
 |[[健全]]
 |[[健身]]
 |[[健身房]]
-|[[健实]]
-|[[健谈]]
+|[[健實]]
+|[[健談]]
 |[[健忘]]
 |[[健旺]]
 |[[健胃]]
 |[[健在]]
-|[[健壮]]
+|[[健壯]]
 }}
 
 ===Proper noun===
