--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -48,30 +48,7 @@
 # [[adeptly]], [[energetically]]
 
 ===Compounds===
-{{attention|zh|needs conversion to traditional}}
-{{der3
-|[[健步]]
-|[[健存]]
-|[[健兒]]
-|[[健將]]
-|[[健捷]]
-|[[健康]]
-|[[健朗]]
-|[[健美]]
-|[[健美操]]
-|[[健美褲]]
-|[[健美運動]]
-|[[健全]]
-|[[健身]]
-|[[健身房]]
-|[[健實]]
-|[[健談]]
-|[[健忘]]
-|[[健旺]]
-|[[健胃]]
-|[[健在]]
-|[[健壯]]
-}}
+{{zh-der|健步|健存|健兒|健將|健捷|健康|健朗|健美|健美操|健美褲|健美運動|健全|健身|健身房|健實|健談|健忘|健旺|健胃|健在|健壯}}
 
 ===Proper noun===
 {{zh-proper noun}}
