--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -12,13 +12,41 @@
 * {{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
 
 ----
+==Chinese==
+{{zh-forms|s=开}}
 
-==Cantonese==
+===Pronunciation===
+{{zh-pron
+|m=kēng
+|ma=zh-keng.ogg
+|c=haang1
+|h=pfs=hâng
+|md=
+|mn=kheⁿ/khiⁿ
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-===Hanzi===
-{{yue-hanzi|jyut=haang1|y=haang1}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=土04}}
+# {{rfdef|lang=zh}}
+
+====Compounds====
+* [[坑道]]
+* [[坑害]]
+* [[坑井]]
+* [[坑坑坎坎]]
+* [[坑蒙]]
+* [[坑蒙拐骗]]
+* [[坑木]]
+* [[坑骗]]
+* [[坑人]]
+* [[坑洼]]
+* [[坑子]]
+* [[屎坑]]
 
 ----
 
@@ -44,31 +72,6 @@
 {{ko-hanja|hangeul=갱|rv=gaeng|mr=kaeng}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-keng.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kēng]] ([[keng1]])|wg=k'eng<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
-
-====Compounds====
-* [[坑道]]
-* [[坑害]]
-* [[坑井]]
-* [[坑坑坎坎]], [[坑坑坎坎的]]
-* [[坑蒙]]
-* [[坑蒙拐骗]]
-* [[坑木]]
-* [[坑骗]]
-* [[坑人]]
-* [[坑洼]]
-* [[坑子]]
 
 ----
 
