--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -35,18 +35,7 @@
 # {{rfdef|lang=zh}}
 
 ====Compounds====
-* [[坑道]]
-* [[坑害]]
-* [[坑井]]
-* [[坑坑坎坎]]
-* [[坑蒙]]
-* [[坑蒙拐骗]]
-* [[坑木]]
-* [[坑骗]]
-* [[坑人]]
-* [[坑洼]]
-* [[坑子]]
-* [[屎坑]]
+{{zh-der|坑道|坑害|坑井|坑坑坎坎|坑蒙|坑蒙拐騙|坑木|坑騙|坑人|坑洼|坑子|屎坑}}
 
 ----
 
