/* Compounds */ der5 / ja-l <感#38388137>

--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -116,48 +116,46 @@
 * {{ja-readings|goon=[[こん]] (kon)|kanon=[[かん]] (kan)|kun=}} <!-- KANJIRU (on KAN + suffix ZURU/JIRU, like SHIN+ZURU or EN+JIRU) is NOT really a kun. Why does the Unihan Database say so? -->
 
 ====Compounds====
-{{top3}}
-* [[感温]]
-* [[感化]]
-* [[感懐]]
-* [[感慨]] (かんがい, kangai)
-* [[感慨無量]]
-* [[感覚]]
-* [[感官]]
-* [[感泣]]
-* [[感興]]
-* [[感吟]]
-* [[感激]]
-* [[感光]]
-* [[感謝]]
-{{mid3}}
-* [[感知]] ([[かんち]], ''[[kanchi]]''): [[perception]]
-* [[感受]]
-* [[感受性]]
-* [[感傷]]
-* [[感賞]]
-* [[感情]]
-* [[感触]]
-* [[感心]]
-* [[感性]]
-* [[感染]]
-* [[感想]]
-* [[感嘆]], [[感歎]]
-* [[感嘆符]]
-{{mid3}}
-* [[感知]]
-* [[感電]]
-* [[感度]]
-* [[感動]]
-* [[感動詞]]
-* [[感得]]
-* [[感応]]
-* [[感服]]
-* [[感奮]]
-* [[感冒]]
-* [[感銘]]
-* [[感涙]]
-{{bottom}}
+{{der5
+| {{ja-l|感温}}
+| {{ja-l|感化}}
+| {{ja-l|感懐}}
+| {{ja-l|感慨|かんがい|kangai}}
+| {{ja-l|感慨無量}}
+| {{ja-l|感覚}}
+| {{ja-l|感官}}
+| {{ja-l|感泣}}
+| {{ja-l|感興}}
+| {{ja-l|感吟}}
+| {{ja-l|感激}}
+| {{ja-l|感光}}
+| {{ja-l|感謝}}
+| {{ja-l|感知|かんち|kanchi}}: [[perception]]
+| {{ja-l|感受}}
+| {{ja-l|感受性}}
+| {{ja-l|感傷}}
+| {{ja-l|感賞}}
+| {{ja-l|感情}}
+| {{ja-l|感触}}
+| {{ja-l|感心}}
+| {{ja-l|感性}}
+| {{ja-l|感染}}
+| {{ja-l|感想}}
+| {{ja-l|感嘆}}, {{ja-l|感歎}}
+| {{ja-l|感嘆符}}
+| {{ja-l|感知}}
+| {{ja-l|感電}}
+| {{ja-l|感度}}
+| {{ja-l|感動}}
+| {{ja-l|感動詞}}
+| {{ja-l|感得}}
+| {{ja-l|感応}}
+| {{ja-l|感服}}
+| {{ja-l|感奮}}
+| {{ja-l|感冒}}
+| {{ja-l|感銘}}
+| {{ja-l|感涙}}
+}}
 
 ===Suffix===
 {{ja-pos|suffix|かん}}
