--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ##*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
 ##* {{quote-book|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
 ##* {{quote-book|author=Katie Price|authorlink=Katie Price|title=He's the One|location=London|publisher=[[w:Random House|Century]]|year=2013|page=233|isbn=978-1-84605-959-9|passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's straight, but there's always hope.}}
+# {{context|lang=en|science|mathematics}} the property allowing the [[parallel-transport]] of [[vector]]s along a course that keeps [[tangent]] vectors remain tangent vectors throughout that course
 
 ====Antonyms====
 * {{l|en|bent}}
