--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -6,7 +6,7 @@
 * {{sense|dated}} {{l|en|ex. gr.}}, {{l|en|e. g.}}
 
 ===Etymology===
-A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{m|la|exempli gratia|exemplī grātiā|[[for the sake of]] an [[example]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref>
+A terser form of {{l|en|ex. gr.}}, both abbreviating [[egsample]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref>
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
