--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -6,7 +6,7 @@
 * {{sense|dated}} {{l|en|ex. gr.}}, {{l|en|e. g.}}
 
 ===Etymology===
-A terser form of {{l|en|ex. gr.}}, both abbreviating [[egsample]].
+Abbreviating [[egsample]].
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
