--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -35,9 +35,11 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=천|rv=cheon|mr=ch'ŏn}}
+{{ko-hanja|hangeul=[[수]], [[천]]|rv=su, cheon|mr=su, ch'ŏn}}
 
-# {{defn|lang=ko|sort=土03}}
+# Used in placename (See [[심천]])
+
+* Note: the pronunciation [[수]](''su''), which is attested as standard in most of Korean hanja dictionaries, is reconstructed from [[Fanqie]], whereas [[천]](''cheon'') is derived from the modern Chinese pronunciation. As this hanja is not used in common Sino-Korean words, 천 is used in most of Korean dialogues and documents.
 
 ----
 
