--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -39,7 +39,7 @@
 
 # Used in placename (See [[深圳]])
 
-* Note: the pronunciation [[수]](''su''), which is attested as standard in most of Korean hanja dictionaries, is reconstructed from [[Fanqie]], whereas [[천]](''cheon'') is derived from the modern Chinese pronunciation. As this hanja is not used in common Sino-Korean words, 천 is used in most of Korean dialogues and documents.
+* Note: the pronunciation [[수]](''su''), which is attested as standard in most of Korean hanja dictionaries, is reconstructed from [[w:Fanqie|Fanqie]], whereas [[천]](''cheon'') is derived from the modern Chinese pronunciation. As this hanja is not used in common Sino-Korean words, 천 is used in most of Korean dialogues and documents.
 
 ----
 
