--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -212,10 +212,13 @@ From {{etyl|enm|en}} {{m|enm|counten}}, from {{etyl|xno|en}} {{m|fro|conter}}, f
 * French: {{t+|fr|compte|m}}, {{t+|fr|décompte|m}}
 * Galician: {{t|gl|conta|f}}
 * German: {{t+|de|zählen}}
-{{trans-mid}}
 * Greek: {{t+|el|μέτρημα|n}}, {{t+|el|μέτρηση|f}}, {{t+|el|καταμέτρηση|f}}
+{{trans-mid}}
 * Icelandic: {{t|is|talning|f}}
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
+* Norwegian:
+*: Bokmål: {{t|nb|opptelling|m|f}}
+*: Nynorsk: {{t|nn|oppteljing|f}}
 * Polish: {{t+|pl|liczenie}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Quechua: {{t|qu|yupa}}
@@ -237,13 +240,16 @@ From {{etyl|enm|en}} {{m|enm|counten}}, from {{etyl|xno|en}} {{m|fro|conter}}, f
 * French: {{t+|fr|compte|m}}, {{t+|fr|nombre}}
 *: Old French: {{t|fro|conte}}
 * German: {{t+|de|Anzahl|f}}
-{{trans-mid}}
 * Icelandic: {{t+|is|tala|f}}
+{{trans-mid}}
 * Ido: {{t+|io|konto}}
 * Italian: {{t+|it|totale|m}}, {{t+|it|numero}}
 * Kyrgyz: {{t+|ky|эсеп}}
 * Middle English: {{t|enm|counte}}
 * Navajo: {{t|nv|nambooígíí}}
+* Norwegian:
+*: Bokmål: {{t|nb|opptelling|m|f}}
+*: Nynorsk: {{t|nn|oppteljing|f}}
 * Portuguese: {{t+|pt|contagem|f}}, {{t+|pt|número}}
 * Romanian: {{t+|ro|numărare|f}}
 * Russian: {{t+|ru|счёт|m}}
