#* '''2016''', Alex Hern, ''Revolv devices bricked as Google's Nest shuts down smart home company'' (in ''The Guardian'') #*: Google owner Alphabet’s subsidiary Nest is closing a smart-home company it bought less than two years ago, leaving customers’ <brick#38465614>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -284,8 +284,11 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 |newsgroup= microsoft.public.windowsce.platbuilder|id=OHm5#hLdCHA.2592@tkmsftngp09|url=https://groups.google.com/forum/#!original/microsoft.public.windowsce.platbuilder/xRTiJphRn-o/ytrmsWNhLKEJ|date=2002-10-15|accessdate=2016-02-25|passage=Just need to project against users from deleting NK.BIN and '''bricking''' the device. }}
 #* '''2007''' December 14, Joe Barr, “PacketProtector turns SOHO router into security powerhouse”, ''Linux.com''
 #*: installing third-party firmware will void your warranty, and it is possible that you may '''brick''' your router.
+#* '''2016''', Alex Hern, ''Revolv devices bricked as Google's Nest shuts down smart home company'' (in ''The Guardian'')
+#*: Google owner Alphabet’s subsidiary Nest is closing a smart-home company it bought less than two years ago, leaving customers’ devices useless as of May. {{...}} The company declined to share how many customers would be left with '''bricked''' devices as a result of the shutdown.
+
 ====Antonyms====
-* {{sense|technology, slang: revert a device to the operational state}} {{l|en|unbrick}}
+* {{sense|technology, slang: revert a device to nonoperational state}} {{l|en|unbrick}}
 
 ====Derived terms====
 * {{l|en|bricker}}
