/* Swedish */ <et cetera#38467842>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -70,6 +70,10 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 
 ==Swedish==
 
+===Alternative forms===
+* {{l|sv|etcetera}}
+* {{l|sv|etc.}}
+
 ===Adverb===
 {{head|sv|adverb}}
 
@@ -77,8 +81,6 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 
 ====Synonyms====
 * {{l|sv|och så vidare}}
-
-{{tbot entry|Swedish|etcetera|2009|April|sv}}
 
 [[cs:et cetera]]
 [[da:et cetera]]
