--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -92,6 +92,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t+|pt|cágado}}
 * Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
 * Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепа́ха|f}}
+* Sanskrit: {{t+|sa|कच्छप|sc=Deva}}
 * Scottish Gaelic: {{t|gd|crùban-coille|m}}, {{t|gd|sligeanach|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{qualifier|tortoise or turtle}} {{t|sh|корњача|f|sc=Cyrl}}
