--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -14,12 +14,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ciu1]], [[ziu1]]|y=chiu1, jiu1}}
+===Pronunciation===
+{{zh-pron
+|m=zhāo
+|c=ciu1,ziu1
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -46,15 +60,6 @@
 {{ko-hanja|hangeul=[[소]], [[조]]|eumhun=|rv=so, jo|mr=so, cho|y=so, co}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhāo]] ([[zhao1]])|wg=chao<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
