--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -14,12 +14,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=ham2}}
+===Pronunciation===
+{{zh-pron
+|m=kǎn
+|c=ham2,ham1,ham3
+|h=pfs=
+|md=
+|mn=khám
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -41,22 +55,6 @@
 {{ko-hanja|hangeul=감|rv=gam|mr=kam}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kǎn]] ([[kan3]])|wg=k'an<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''坎''' (*kǒm)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
 
 ----
 
