Reverted edits by [[Special:Contributions/104.244.26.63|104.244.26.63]]. If you think this rollback is in error, please leave a message on my [[User talk:Metaknowledge|talk page]]. <Germany#38475085>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -255,7 +255,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Samogitian: {{t|sgs|Vuokītėjė}}
 * Saterland Frisian: {{t|stq|Düütsklound}}
 * Scottish Gaelic: {{t|gd|Gearmailt|f}}
-* Serbo-Croatian: {{t+|sh|Njemačka|f}}
+* Serbo-Croatian:
 *: Cyrillic: {{t|sh|Немачка|f|sc=Cyrl}}
 *: Roman: {{t|sh|Nemačka|f}}
 * Sicilian: {{t|scn|Girmania|f}}
