/* Derived terms */ <straight#38476152>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -123,10 +123,11 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * {{l|en|straightforward}} / [[straight-forward]]
 * {{l|en|straight from the horse's mouth}}
 * {{l|en|straight from the shoulder}}
+* {{l|en|straight goods}}
 * {{l|en|straight hit}}
 * {{l|en|straightjacket}}
-* {{l|en|straight line}}
 {{rel-mid3}}
+* {{l|en|straight line}}
 * {{l|en|straightly}}
 * {{l|en|straight man}}
 * {{l|en|straightness}}
