--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -11,12 +11,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=gau3|y=gau3}}
+===Pronunciation===
+{{zh-pron
+|m=gòu
+|c=gau3
+|h=pfs=
+|md=
+|mn=káu
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -61,15 +75,6 @@
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gòu]] ([[gou4]])|wg=kou<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
