--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -13,16 +13,30 @@
 
 ====References====
 * {{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A|ud=22346|bh=A77B|bd=42875}}
-* [http://www.mdbg.net/chindict/chindict.php?page=worddict&wdrst=1&wdqtm=0&wdqcham=1&wdqt=%E5%9D%8A MDBG Chinese-English Dictionary (CC-CEDICT)]
+* {{R:cedict}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=fong1}}
+===Pronunciation===
+{{zh-pron
+|m=坊
+|c=fong4,fong1
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -48,15 +62,6 @@
 {{ko-hanja|hangeul=[[방]]|rv=bang|mr=pang}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fāng]] ([[fang1]])|wg=fang<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
 
 ----
 
