--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -2,6 +2,9 @@
 {{wikipedia}}
 {{wikivoyage}}
 
+===Etymology===
+{{compound|united|kingdom|lang=en}}, first attested from 1706.
+
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|/juːˌnaɪ.tɪd ˈkɪŋ.dəm/|/jʊˌnaɪ.tɪd ˈkɪŋ.dəm/|/jəˌnaɪ.tɪd ˈkɪŋ.dəm/|lang=en}}
 * {{audio|en-us-United Kingdom.ogg|Audio (US)|lang=en}}
@@ -14,7 +17,7 @@
 # {{label|en|historical|informal}} The [[Kingdom of Great Britain]] (1707-1801)
 
 ====Synonyms====
-* {{sense|Sense 1}} {{l|en|United Kingdom of Great Britain and Northern Ireland}} {{qualifier|official name}}, [[UK]] {{qualifier|abbreviation}}, [[Great Britain]] {{qualifier|loosely}}, [[Britain]] {{qualifier|loosely}}.
+* {{sense|Sense 1}} {{l|en|United Kingdom of Great Britain and Northern Ireland}} {{qualifier|official name}}, {{l|en|UK}} or {{l|en|U.K.}} {{qualifier|abbreviation}}, {{l|en|Great Britain}} {{qualifier|loosely}}, {{l|en|Britain}} {{qualifier|loosely}}, {{l|en|England}} {{qualifier|non-standard; sometimes offensive}}.
 * {{sense|Sense 3}} {{l|en|Great Britain}} {{qualifier|official name}}
 
 ====Translations====
