--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -31,7 +31,7 @@
 * Georgian: {{t|ka|ძვლის ტვინი|sc=Geor}}
 * German: {{t+|de|Knochenmark|n}}
 * Guaraní: {{t|gn|karaku}}
-* Hebrew: {{t|he|מח עצם}}
+* Hebrew: {{t+|he|מֹחַ עֶצֶם|m|tr=móaḥ 'étzem}}
 * Hindi: {{t|hi|अस्थि मज्जा|f|sc=Deva}}, {{t|hi|मज्जा|f|sc=Deva}}
 * Hungarian: {{t+|hu|csontvelő}}
 * Icelandic: {{t+|is|beinmergur|m}}
