+en:Hair <coat#38530596>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -206,6 +206,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * {{l|en|taco}}
 
 [[Category:en:Clothing]]
+[[Category:en:Hair]]
 [[Category:1000 English basic words]]
 
 [[ar:coat]]
