--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -130,6 +130,7 @@ From {{etyl|non|en}} {{m|non|skyrta}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*sku
 * Volapük: {{t+|vo|juüp}}
 * Welsh: {{t|cy|sgert|f}}
 * Yiddish: {{t|yi|ספּאָדניצע|f}}, {{t|yi|ספּודניצע|f}}
+* Zazaki: {{t|zza|eteg}}
 {{trans-bottom}}
 
 {{trans-top|part of dress}}
@@ -159,6 +160,7 @@ From {{etyl|non|en}} {{m|non|skyrta}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*sku
 * Spanish: {{t+|es|falda|f}}, {{t+|es|enaguas|f-p}} {{qualifier|Costa Rica|Nicaragua}}, {{t+|es|pollera|f}} {{qualifier|Argentina|Chile|Paraguay|Uruguay}}, {{t|es|saya|f}} {{qualifier|Cuba}}
 * Swedish: {{t+|sv|kjol|c}}
 * Volapük: {{t+|vo|juüp}}
+* Zazaki: {{t|zza|gınc}}
 {{trans-bottom}}
 
 {{trans-top|something resembling a skirt}}
