t+yi:[[האַקן]] t+yi:[[שנײַדן]] ([[WT:EDIT|Assisted]]) <cut#38541556>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -569,6 +569,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Venetian: {{t|vec|tajar}}
 * Welsh: {{t+|cy|torri}}
 * ǃXóõ: {{t|nmn|gǂháá}}
+* Yiddish: {{t|yi|האַקן}}, {{t|yi|שנײַדן}}
 * Zazaki: {{t|zza|bırnayen}}
 {{trans-bottom}}
 
@@ -618,6 +619,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}} {{qualifier|with knife}}, {{t+|sv|klippa}} {{qualifier|with scissors}}
 * Welsh: {{t+|cy|torri}}
+* Yiddish: {{t|yi|שנײַדן}}
 {{trans-bottom}}
 
 {{trans-top|to separate from prior association}}
