--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -102,7 +102,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{der-bottom}}
 
 ====Translations====
-{{trans-top|the act of catching a ball {{jump|t|catching a ball|s}}}}
+{{trans-top|the act of catching a ball}}
 * Bulgarian: {{t+|bg|хващане|n}}, {{t+|bg|улавяне|n}}
 * Dutch: {{t+|nl|opvangen}}, {{t+|nl|vangen}}
 * Ewe: {{t|ee|xe}}
@@ -121,7 +121,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|fångst|c}}
 {{trans-bottom}}
 
-{{trans-top|a find, in particular a boyfriend/girlfriend {{jump|t|a find|s}}}}
+{{trans-top|a find, in particular a boyfriend/girlfriend}}
 * Dutch: {{t+|nl|vangst|f}}
 * Finnish: {{t+|fi|saalis}}, {{t+|fi|löytö}}
 * French: {{t+|fr|prise|f}}, {{t+|fr|touche}} {{qualifier|vulgar}}, {{t+|fr|conquête}}
@@ -133,7 +133,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|kap|n}}
 {{trans-bottom}}
 
-{{trans-top|a clasp which stops something from opening {{jump|t|stopping mechanism|s}}}}
+{{trans-top|a clasp which stops something from opening}}
 * Bulgarian: {{t+|bg|резе|n}}
 * Dutch: {{t+|nl|haak|m}}
 * Finnish: {{t+|fi|haka}}, {{t|fi|salpa}}, {{t+|fi|solki}}
@@ -143,7 +143,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t|sv|hasp|c}}, {{t+|sv|hake|c}}
 {{trans-bottom}}
 
-{{trans-top|a hidden difficulty, especially in a deal or negotiation {{jump|t|hidden difficulty|s}}}}
+{{trans-top|a hidden difficulty, especially in a deal or negotiation}}
 * Bulgarian: {{t+|bg|уловка|f}}
 * Dutch: {{t+|nl|struikelblok|n}}, {{t+|nl|valstrik|m}}
 * Finnish: {{t+|fi|koukku}}
@@ -159,7 +159,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
 
-{{trans-top|that which is captured or caught {{jump|t|something caught}}}}
+{{trans-top|that which is captured or caught}}
 * Dutch: {{t+|nl|vangst|f}}
 * Finnish: {{t+|fi|saalis}}
 * German: {{t+|de|Fang|m}}
@@ -175,14 +175,14 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|fångst|c}}
 {{trans-bottom}}
 
-{{trans-top|the act of noticing, understanding or hearing {{jump|t|act of noticing|s}}}}
+{{trans-top|the act of noticing, understanding or hearing}}
 * Bulgarian: {{t+|bg|разбиране|n}}
 * Finnish: {{t+|fi|huomio}}
 {{trans-mid}}
 * Italian: {{t+|it|colpo|m}}
 {{trans-bottom}}
 
-{{trans-top|the game of catching a ball {{jump|t|ball game}}}}
+{{trans-top|the game of catching a ball}}
 * Finnish: {{t|fi|kopittelu}}
 {{trans-mid}}
 * Japanese: {{t|ja|キャッチボール|tr=kyacchibōru}}
