--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -86,7 +86,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 <references/>
 
 ===Noun===
-3n-noun|?}}
+{{en-noun|?}}
 
 # {{label|en|informal}} misuse of the abbreviation "e.g." (exampli gratia, for example) as a pseudo-abbreviation of "example"
 #: ''Lemurs are an '''e.g.''' of a non-simian primate.''
