/* Compounds */ zh-der <地#38548961>

--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -72,91 +72,7 @@
 # {{lb|zh|Cantonese}} {{alternative form of|哋||plurality marker|lang=zh}}
 
 ===Compounds===
-{{der5
-|{{zh-l|草地}}
-|{{zh-l|地板}}
-|{{zh-l|地磅}}
-|{{zh-l|地標}}
-|{{zh-l|地表}}
-|{{zh-l|地表水}}
-|{{zh-l|地鱉}}
-|{{zh-l|地波}}
-|{{zh-l|地步}}
-|{{zh-l|地財}}
-|{{zh-l|地磁}}
-|{{zh-l|地磁赤道}}
-|{{zh-l|地磁極}}
-|{{zh-l|地產}}
-|{{zh-l|地場}}
-|{{zh-l|地朝}}
-|{{zh-l|地秤}}
-|{{zh-l|地大物博}}
-|{{zh-l|地帶}}
-|{{zh-l|地道}}
-|{{zh-l|地點}}
-|{{zh-l|地方}}
-|{{zh-l|地方兒}}
-|{{zh-l|地方病}}
-|{{zh-l|地方主義}}
-|{{zh-l|地府}}
-|{{zh-l|地光}}
-|{{zh-l|地滾球}}
-|{{zh-l|地核}}
-|{{zh-l|地黃}}
-|{{zh-l|地積}}
-|{{zh-l|地基}}
-|{{zh-l|地極}}
-|{{zh-l|地價}}
-|{{zh-l|地角}}
-|{{zh-l|地角天涯}}
-|{{zh-l|地腳}}
-|{{zh-l|地窖}}
-|{{zh-l|地纜}}
-|{{zh-l|地理}}
-|{{zh-l|地裂}}
-|{{zh-l|地靈人傑}}
-|{{zh-l|地漏}}
-|{{zh-l|地幔}}
-|{{zh-l|地貌}}
-|{{zh-l|地面}}
-|{{zh-l|地氣}}
-|{{zh-l|地殼}}
-|{{zh-l|地懃}}
-|{{zh-l|地球}}
-|{{zh-l|地球儀}}
-|{{zh-l|地區}}
-|{{zh-l|地權}}
-|{{zh-l|地券}}
-|{{zh-l|地兒}}
-|{{zh-l|地熱}}
-|{{zh-l|地煞}}
-|{{zh-l|地上}}
-|{{zh-l|地毯}}
-|{{zh-l|地鐵}}
-|{{zh-l|地圖}}
-|{{zh-l|地位}}
-|{{zh-l|地下}}
-|{{zh-l|地形}}
-|{{zh-l|地學}}
-|{{zh-l|地衣}}
-|{{zh-l|地榆}}
-|{{zh-l|地獄}}
-|{{zh-l|地域}}
-|{{zh-l|地租}}
-|{{zh-l|地照}}
-|{{zh-l|地震}}
-|{{zh-l|地震波}}
-|{{zh-l|地震儀}}
-|{{zh-l|地震震級}}
-|{{zh-l|地支}}
-|{{zh-l|地址}}
-|{{zh-l|地志}}
-|{{zh-l|地質}}
-|{{zh-l|地軸}}
-|{{zh-l|地主}}
-|{{zh-l|地獄}}
-|{{zh-l|土地}}
-}}
+{{zh-der|草地|地板|地磅|地標|地表|地表水|地鱉|地波|地步|地財|地磁|地磁赤道|地磁極|地產|地場|地朝|地秤|地大物博|地帶|地道|地點|地方|地方兒|地方病|地方主義|地府|地光|地滾球|地核|地黃|地積|地基|地極|地價|地角|地角天涯|地腳|地窖|地纜|地理|地裂|地靈人傑|地漏|地幔|地貌|地面|地氣|地殼|地懃|地球|地球儀|地區|地權|地券|地兒|地熱|地煞|地上|地毯|地鐵|地圖|地位|地下|地形|地學|地衣|地榆|地獄|地域|地租|地照|地震|地震波|地震儀|地震震級|地支|地址|地志|地質|地軸|地主|地獄|土地}}
 
 ----
 
