--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -42,45 +42,7 @@ Top component unrelated to [[音]].
 # {{zh-abbrev|意大利|[[Italy]]; [[Italian]]}}
 
 ====Compounds====
-{{der3
-|{{zh-l|意表}}
-|{{zh-l|意大利}}
-|{{zh-l|意會}}
-|{{zh-l|意見}}
-|{{zh-l|意匠}}
-|{{zh-l|意境}}
-|{{zh-l|意料}}
-|{{zh-l|意馬心猿}}
-|{{zh-l|意念}}
-|{{zh-l|意氣}}
-|{{zh-l|意氣風發}}
-|{{zh-l|意氣用事}}
-|{{zh-l|意趣}}
-|{{zh-l|意識}}
-|{{zh-l|意識流}}
-|{{zh-l|意識形態}}
-|{{zh-l|意思}}
-|{{zh-l|意圖}}
-|{{zh-l|意外}}
-|{{zh-l|意味}}
-|{{zh-l|意味著/意味着}}
-|{{zh-l|意下}}
-|{{zh-l|意想}}
-|{{zh-l|意向}}
-|{{zh-l|意向書}}
-|{{zh-l|意象}}
-|{{zh-l|意興}}
-|{{zh-l|意義}}
-|{{zh-l|意譯}}
-|{{zh-l|意欲}}
-|{{zh-l|意願}}
-|{{zh-l|意蘊}}
-|{{zh-l|意在言外}}
-|{{zh-l|意旨}}
-|{{zh-l|意志}}
-|{{zh-l|意中人}}
-|{{zh-l|如意}}
-}}
+{{zh-der|意表|意大利|意會|意見|意匠|意境|意料|意馬心猿|意念|意氣|意氣風發|意氣用事|意趣|意識|意識流|意識形態|意思|意圖|意外|意味|意味著/意味着|意下|意想|意向|意向書|意象|意興|意義|意譯|意欲|意願|意蘊|意在言外|意旨|意志|意中人|如意}}
 
 ----
 
