--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -69,26 +69,26 @@ There are minor differences in where the last stroke of the top component (top-l
 |kun=[[はる]] (haru)}}
 
 ====Compounds====
-* [[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
-* [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
-* [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
-* [[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]): [[early spring]], [[New Year]]
-* [[春菊]] ([[しゅんぎく]], [[shungiku]]): [[garland chrysanthemum]]
-* [[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
-* [[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
-* [[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
-* [[春風]] ([[はるかぜ]], [[harukaze]]): spring breeze
-* [[春霞]] ([[はるがすみ]], [[harugasumi]]) springtime haze
-* [[春着]] ([[はるぎ]], [[harugi]]): springwear, New Year's clothes
-* [[春蚕]] ([[はるご]], [[harugo]]): spring breed of silkworms
-* [[春先]] ([[はるさき]], [[harusaki]]): beginning of spring
-* [[春雨]] ([[はるさめ]], [[harusame]]): spring rain, Japanese vermicelli
-* [[春場所]] ([[はるばしょ]], [[harubasho]]): the spring sumo tournament in Osaka
-* [[春繭]] ([[はるまゆ]], [[harumayu]]): the spring cocoon crop
-* [[春休み]] ([[はるやすみ]], [[haruyasumi]]): spring break
-* [[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
-* [[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
-* [[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
+* {{ja-r|小春|こはる}}: [[early autumn]], [[Indian summer]]
+* {{ja-r|小春日和|こはるびより}}: [[early autumn]], [[Indian summer]]
+* {{ja-r|常春|とこはる}}: [[everlasting spring]]
+* {{ja-r|初春|はつはる}}, {{ja-r|初春|しょしゅん}}: [[early spring]], [[New Year]]
+* {{ja-r|春菊|しゅんぎく}}: [[garland chrysanthemum]]
+* {{ja-r|春秋|しゅんじゅう}}: spring and autumn, months and years, Chronicles of Lu
+* {{ja-r|春秋戦国|しゅんじゅうせんごく}}: [[Spring and Autumn Period]] and [[Warring States Period]] in China
+* {{ja-r|春一番|はるいちばん}}: first storm of spring
+* {{ja-r|春風|はるかぜ}}: spring breeze
+* {{ja-r|春霞|はるがすみ}} springtime haze
+* {{ja-r|春着|はるぎ}}: springwear, New Year's clothes
+* {{ja-r|春蚕|はるご}}: spring breed of silkworms
+* {{ja-r|春先|はるさき}}: beginning of spring
+* {{ja-r|春雨|はるさめ}}: spring rain, Japanese vermicelli
+* {{ja-r|春場所|はるばしょ}}: the spring sumo tournament in Osaka
+* {{ja-r|春繭|はるまゆ}}: the spring cocoon crop
+* {{ja-r|春休み|はるやすみ}}: spring break
+* {{ja-r|来春|らいしゅん}}: [[next spring]]
+* {{ja-r|翌春|よくしゅん}}: [[next spring]]
+* {{ja-r|春分|しゅんぶん}} [[spring equinox]], [[vernal equinox]]
 
 ===Pronunciation===
 {{wikipedia|lang=ja}}
