--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -101,8 +101,8 @@ There are minor differences in where the last stroke of the top component (top-l
 # [[spring#Noun|spring]] {{gloss|season}}
 
 ====Synonyms====
-* {{l|ja|春季}} ([[しゅんき]], [[shunki]]): [[spring]]
-* {{l|ja|春期}} ([[しゅんき]], [[shunki]]): [[spring]]
+* {{ja-r|春季|しゅんき}}: [[spring]]
+* {{ja-r|春期|しゅんき}}: [[spring]]
 
 ===See also===
 {{table:seasons/ja}}
