t+eu:[[Ameriketako Estatu Batuak]] t+am:[[የተባበሩት የአሜሪካ ግዛቶች]] t+so:[[Gobolada Isku Tegay ee Ameerika]] t+sm:[[Iunaite Sitete o Amerika]] t+fo:[[Sameindu Statirnir Í Amerika]] t+fo:[[Sambandsríki Amerika]] t+ay:[[Istadus... <United States of America#38557785>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -28,13 +28,16 @@
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа|sc=Cyrl}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}
 * Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t+|sq|SHBA}}
+* Amharic: {{t|am|የተባበሩት የአሜሪካ ግዛቶች|sc=Ethi}}
 * Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
 *: Assyrian Neo-Aramaic: {{t|aii|ܐܬܪܘܬܐ ܡܚܝܕܐ ܕܐܡܪܝܟܐ|sc=Syrc}}
 * Armenian: {{t|hy|Ամերիկայի Միացյալ Նահանգներ}}, {{t+|hy|Ամերիկա}}
 * Asturian: {{t+|ast|Estaos Xuníos d'América|m-p}}
+* Aymara: {{t|ay|Istadus Unidus}}
 * Azeri: {{t+|az|Amerika Birləşmiş Ştatları}}
 * Bashkir: {{t|ba|Америка Ҡушма Штаттары|sc=Cyrl}}
+* Basque: {{t|eu|Ameriketako Estatu Batuak}}
 * Belarusian: {{t|be|Злу́чаныя Шта́ты Аме́рыкі|m-p}}, {{t|be|ЗША|m-p}}
 * Bengali: {{t|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktraṣţrô|sc=Beng}}
 * Breton: {{t|br|Stadoù-Unanet Amerika|f-p}}, {{t|br|SUA}}
@@ -53,12 +56,14 @@
 * Eastern Keres: {{t|kee|'Amelika-hui-pu-'ia}}
 * Esperanto: {{t+|eo|Usono}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko}}
 * Estonian: {{t+|et|Ameerika Ühendriigid}}
+* Faroese: {{t|fo|Sameindu Statirnir Í Amerika|n}}, {{t|fo|Sambandsríki Amerika|n}}
 * Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
 * French: {{t+|fr|États-Unis d'Amérique|m-p}}, {{t+|fr|États-Unis|m-p}}, {{t|fr|É-U}}
 * Galician: {{t+|gl|Estados Unidos de América|m-p}}
 * Georgian: {{t|ka|ამერიკის შეერთებული შტატები}}, {{t+|ka|აშშ}}, {{t|ka|შეერთებული შტატები}}
 * German: {{t+|de|Vereinigte Staaten von Amerika|m-p}}, {{t+|de|Vereinigte Staaten|m-p}}, {{t+|de|USA|m-p|f-s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|ΗΠΑ|f-p}}
+* Guaraní: {{t|gn|Tetã peteĩ reko Amérikagua}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
@@ -110,9 +115,11 @@
 * Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}
 * Portuguese: {{t+|pt|Estados Unidos da América|m-p}}, {{t+|pt|Estados Unidos|m-p}}, {{t+|pt|EUA}}
 * Punjabi: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ|tr=sayukat rāj amrīkā|sc=Guru}}
+* Quechua: {{t|qu|Hukllachasqa Amirika Suyukuna}}
 * Romanian: {{t+|ro|Statele Unite ale Americii|f-p}}, {{t+|ro|SUA}}, {{t|ro|Statele Unite|n-p}}
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
 * Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|США|m-p}}
+* Samoan: {{t|sm|Iunaite Sitete o Amerika}}
 * Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f-p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f-p}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Сједињене Америчке Државе|f-p|sc=Cyrl}}, {{t|sh|Америка|f}}, {{t|sh|САД|f-p|sc=Cyrl}}
@@ -121,6 +128,7 @@
 * Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය|sc=Sinh}}
 * Slovak: {{t|sk|Spojené Štáty Americké|m-p}}, {{t+|sk|USA}}
 * Slovene: {{t+|sl|Združene države Amerike|f-p}}, {{t|sl|Združene države|f-p}}, {{t+|sl|ZDA}}
+* Somali: {{t|so|Gobolada Isku Tegay ee Ameerika}}
 * Sotho: {{t|st|Amerika}}
 * Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
