--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -98,6 +98,7 @@
 * Quechua: {{t|qu|Hukllachasqa Qhapaq Suyu}}
 * Romanian: {{t|ro|Regatul Unit al Marii Britanii și Irlandei de Nord|n}}, {{t+|ro|Regatul Unit|n}}
 * Russian: {{t|ru|Соединённое Короле́вство|n}}, {{t+|ru|Соединённое Короле́вство Великобрита́нии и Се́верной Ирла́ндии|n}}
+* Samoan: {{t|sm|Iunaite Malo}}
 * Scots: {{t|sco|Unitit Kinrick}}, {{t|sco|Unitit Kinrick o Greet Britain an Norlin Airlann}}
 * Scottish Gaelic: {{t|gd|Rìoghachd Aonaichte|f|alt=An Rìoghachd Aonaichte}}, {{t|gd|Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath|f}}
 * Serbo-Croatian:
