--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -122,6 +122,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 
 {{trans-top|having blonde hair or complexion}}
 * Arabic: {{t|ar|أَشْقَر|m}}, {{t|ar|شَقْرَاء|f}}, {{t|ar|شُقْر|p}}
+* Armenian: {{t-needed|hy}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
 * Dutch: {{t+|nl|blond}}
 * Esperanto: {{t+|eo|blonda}}
@@ -131,15 +132,19 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Greek:
 *: Ancient: {{t|grc|ξανθός|sc=polytonic}}
 * Ido: {{t+|io|blonda}}
+* Khmer: {{t-needed|km}}
 {{trans-mid}}
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
 * Macedonian: {{t|mk|светол|m|tr=svétol}}, {{t|mk|белолик|m|tr=bélolik}}, {{t|mk|светла|f|tr=svétla}}, {{t|mk|белолика|f|tr=belólika}}
+* Mongolian: {{t-needed|mn}}
 * Persian: {{t+|fa|بور|tr=bur|sc=fa-Arab}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|бе́лый}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, blond
 * Tagalog: {{t|tl|rubyo}}
+* Thai: {{t-needed|th}}
+* Vietnamese: {{t-needed|vi}}
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
 {{trans-bottom}}
 
