--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -65,7 +65,7 @@
 * Indonesian: {{t|id|Kerajaan Inggris Serikat}}, {{t|id|Kerajaan Serikat}}
 * Interlingua: {{t|ia|Regno Unite}}
 * Irish: {{t|ga|Ríocht Aontaithe|alt=An Ríocht Aontaithe|f}}
-* Italian: {{t+|it|Regno Unito|m}}
+* Italian: {{t+|it|Regno Unito|m}}, {{t+|it|Regno Unito di Gran Bretagna e Irlanda del Nord|m}}
 * Japanese: {{t+|ja|英国|tr=えいこく, Eikoku}}, {{t+|ja|イギリス|tr=igirisu}}, {{t|ja|グレートブリテン及び北アイルランド連合王国|tr=Gurēto Buriten oyobi Kita-Airurando rengō ōkoku}}, {{t+|ja|連合王国|tr=れんごうおうこく, Rengō ōkoku}}
 * Kazakh: {{t|kk|Құрама Патшалық}}
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t|km|រាជាណាចក្ររួម}}
@@ -93,7 +93,7 @@
 * Ossetian: {{t|os|Иугонд Паддзахад}}
 * Persian: {{t|fa|پادشاهی متحد|tr=pâdešâhi-ye mottahed|sc=fa-Arab}}
 * Polish: {{t+|pl|Zjednoczone Królestwo|n}}
-* Portuguese: {{t+|pt|Reino Unido|m}}
+* Portuguese: {{t+|pt|Reino Unido|m}}, {{t|pt|Reino Unido da Grã-Bretanha e Irlanda do Norte|m}}
 * Punjabi: {{t|pa|ਸੰਯੁਕਤ ਬਾਦਸ਼ਾਹੀ|sc=Guru}}
 * Quechua: {{t|qu|Hukllachasqa Qhapaq Suyu}}
 * Romanian: {{t|ro|Regatul Unit al Marii Britanii și Irlandei de Nord|n}}, {{t+|ro|Regatul Unit|n}}
@@ -112,7 +112,7 @@
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|Zjadnośone kralojstwo}}
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
-* Spanish: {{t+|es|Reino Unido|m}}
+* Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swedish: {{t+|sv|Förenade kungariket}}; {{qualifier|colloquially:}} {{t+|sv|England}}
 * Tagalog: {{t+|tl|Nagkakaisang Kaharian}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
