--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -106,12 +106,13 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 
 ===Abbreviation===
 {{rfc-header|Abbreviation}}
-{{head|la|abbreviation}}
+{{head|la|abbreviation}} (by [[justification]])
 
 # [[exempli gratia|exemplī grātiā]] ("[[for the sake of]] an [[example]], [[for example]]")
-#* '''1732''' (MDCCXXXII), Antonius Mayr, ''Theologia Scholastica'', Ingolstadium, pg. 55, by [[justification]]:
+#* '''1732''' (MDCCXXXII), Antonius Mayr, ''Theologia Scholastica'', Ingolstadium, page 55, by justification:
 #*: nam licèt e. g. fornicatio prohibita sit {{...}} non tamen id semper fieri necesse est. '''e.g.''' aliquis corruptus pecuniâ {{...}} & tamen obligationem e. g. restituendi damnum
-#* '''1821''', Julius Müller, ''Ratio et historia odii quo foenus habitum est'', page 10:
+#* '''1821''', Julius Müller, ''Ratio et historia odii quo foenus habitum est'', pages 3 and 10, by justification:
+#*: Interdum etiam utrumque vocabulum in usu loquendi inter se commutatur, e. g. Dig. XIII, C. 4. Liv. XXIII, 48.
 #*: Recentiora denique iura, quibus foenus prohibitum est, '''e.g.''' ius Francogallorum, {{...}}
 
 [[cs:e.g.]]
