--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -67,6 +67,7 @@
 * Irish: {{t|ga|Ríocht Aontaithe|alt=An Ríocht Aontaithe|f}}
 * Italian: {{t+|it|Regno Unito|m}}, {{t+|it|Regno Unito di Gran Bretagna e Irlanda del Nord|m}}
 * Japanese: {{t+|ja|英国|tr=えいこく, Eikoku}}, {{t+|ja|イギリス|tr=igirisu}}, {{t|ja|グレートブリテン及び北アイルランド連合王国|tr=Gurēto Buriten oyobi Kita-Airurando rengō ōkoku}}, {{t+|ja|連合王国|tr=れんごうおうこく, Rengō ōkoku}}
+* Kalmyk: {{t|xal|Ниицәтә Нутг}}
 * Kazakh: {{t|kk|Құрама Патшалық}}
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t|km|រាជាណាចក្ររួម}}
 * Korean: {{t+|ko|영국}} ({{t+|ko|英國|sc=Kore}}), {{t|ko|그레이트브리튼 북아일랜드 연합 왕국}} {{t|ko|연합 왕국}}
