--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -40,7 +40,7 @@ Also simplification of [[詹]], as in [[担]].
 
 # [[early]] [[morning]]; [[dawn]]
 # a [[female]] [[character]], ''[[particularly]]'' a [[lead]] [[role]], in a [[traditional]] [[Chinese opera]]
-# an [[actor]] or [[actress]] [[play]]ing [[such]] [[character]]s
+# an [[actor]] or [[actress]] [[known]] for [[play]]ing [[such]] [[character]]s
 
 ----
 
