t+nn:[[Det sameinte kongeriket Storbritannia og Nord-Irland]] ([[WT:EDIT|Assisted]]) <United Kingdom#38564010>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -90,6 +90,7 @@
 * North Frisian: {{t|frr|Feriind Kiningrik}}
 * Northern Sami: {{t|se|Ovttastuvvan gonagasriika}}
 * Norwegian: {{t|no|Det forente kongerike Storbritannia og Nord-Irland}}
+*: Nynorsk: {{t|nn|Det sameinte kongeriket Storbritannia og Nord-Irland}}
 * Occitan: {{t+|oc|Reialme Unit|m}}
 * Ossetian: {{t|os|Иугонд Паддзахад}}
 * Persian: {{t|fa|پادشاهی متحد|tr=pâdešâhi-ye mottahed|sc=fa-Arab}}
