/* Norwegian */ Wikipedia <New Zealand#38564330>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -191,6 +191,8 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 ----
 
 ==Norwegian==
+{{wikipedia|lang=nb}}
+{{wikipedia|lang=nn}}
 
 ===Proper noun===
 {{head|no|proper noun}}
