--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -80,25 +80,25 @@ Top component unrelated to [[音]].
 * {{ja-r|意向|いこう}}
 * {{ja-r|意志|いし}}: [[will]], [[intent]]
 * {{ja-r|意思|いし}}
-* {{ja-r|意思能力}}
+* {{ja-r|意思能力|いしのうりょく}}
 * {{ja-r|意識|いしき}}
 * {{ja-r|意趣|いしゅ}}
 {{der-mid3}}
 * {{ja-r|意趣返し|いしゅがえし}}
 * {{ja-r|意匠|いしょう}}
 * {{ja-r|意図|いと}}
-* {{ja-r|意表}}
+* {{ja-r|意表|いひょう}}
 * {{ja-r|意味|いみ}}: [[meaning]], [[significance]]
 * {{ja-r|意味深長|いみしんちょう}}
 * {{ja-r|意欲|いよく}}
-* {{ja-r|願意}}
+* {{ja-r|願意|がんい}}
 * {{ja-r|敬意|けい.い}}
 * {{ja-r|決意|けつい}}
 * {{ja-r|故意|こい}}
-* {{ja-r|故意犯}}
+* {{ja-r|故意犯| こいはん}}
 * {{ja-r|合意|ごうい}}
 * {{ja-r|賛意|さんい}}
-* {{ja-r|宿意}}
+* {{ja-r|宿意|しゅくい}}
 * {{ja-r|真意|しんい}}
 * {{ja-r|随意|ずい.い}}
 * {{ja-r|生意気|なまいき}}
@@ -109,15 +109,15 @@ Top component unrelated to [[音]].
 * {{ja-r|総意|そうい}}
 * {{ja-r|大意|たい.い}}
 * {{ja-r|注意|ちゅうい}}
-* {{ja-r|当意即妙}}
+* {{ja-r|当意即妙|とういそくみょう}}
 * {{ja-r|同意|どうい}}
 * {{ja-r|得意|とくい}}
 * {{ja-r|熱意|ねつい}}
-* {{ja-r|表意}}
-* {{ja-r|片意地}}
+* {{ja-r|表意|ひょうい}}
+* {{ja-r|片意地|かたいじ}}
 * {{ja-r|無意味|むいみ}}
 * {{ja-r|用意|ようい}}
-* {{ja-r|留意}}
+* {{ja-r|留意|りゅうい}}
 {{der-bottom}}
 
 ===Noun===
