t+eu:[[{{t-needed}}]] t+km:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <choose#38587615>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -45,6 +45,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Armenian: {{t+|hy|ընտրել}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
 * Azeri: {{t+|az|seçmək}}
+* Basque: {{t-needed|eu}}
 * Belarusian: {{t|be|выбіра́ць|impf|sc=Cyrl}}, {{t|be|вы́браць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|নির্বাচন করা|tr=nirbacôn kôra|sc=Beng}}
 * Bulgarian: {{t+|bg|подби́рам|impf}}
@@ -80,9 +81,10 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Japanese: {{t|ja|選ぶ|tr=えらぶ, erabu}}
 * Norman: {{t|nrf|chouaîsi}}
 * Kazakh: {{t|kk|таңдау|sc=Cyrl}}
+* Khmer: {{t-needed|km}}
+{{trans-mid}}
 * Korean: {{t+|ko|고르다|sc=Hang}}
 * Kyrgyz: {{t+|ky|тандоо|sc=Cyrl}}
-{{trans-mid}}
 * Lao: {{t|lo|ເລືອກ|sc=Laoo}}
 * Latin: {{t+|la|lego}}
 * Latvian: {{t|lv|atlasīt}}
