t+km:[[រើស]] t+km:[[ជ្រើស]] ([[WT:EDIT|Assisted]]) <choose#38588031>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -81,7 +81,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Japanese: {{t|ja|選ぶ|tr=えらぶ, erabu}}
 * Norman: {{t|nrf|chouaîsi}}
 * Kazakh: {{t|kk|таңдау|sc=Cyrl}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|រើស|tr=rəəh|sc=Khmr}}, {{t+|km|ជ្រើស|tr=crəəh|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|고르다|sc=Hang}}
 * Kyrgyz: {{t+|ky|тандоо|sc=Cyrl}}
