t+gsw:[[Butter]] ([[WT:EDIT|Assisted]]) <butter#38597960>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -228,7 +228,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Galician: {{t+|gl|manteiga|f}}
 * Georgian: {{t|ka|კარაქი}}
 * German: {{t+|de|Butter|f}}
-*: Alemannic German: {{t|gsw|Anke|m}}
+*: Alemannic German: {{t|gsw|Anke|m}}, {{t|gsw|Butter|m}}
 *: Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}
 *: Pennsylvania German: {{t|pdc|Booter|f}}
 *: Silesian German: {{t|sli|Putter|f}}
