/* Japanese */ compound 慈鳥 <慈#38600605>

--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -43,7 +43,10 @@
 # {{defn|lang=ja|sort=心10}}
 
 ====Readings====
-* {{ja-readings|goon=[[じ]] (ji)|kanon=[[し]] (shi)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
+{{ja-readings|goon=[[じ]] (ji)|kanon=[[し]] (shi)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
+
+====Compounds====
+* {{ja-r|慈鳥|じちょう}}: [[crow]], [[raven]]
 
 ----
 
