--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -3,6 +3,8 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=9|four=|canj=ABT|ids=⿱日皿}}
 
+# to [[feed]] a [[prisoner]]
+
 ====References====
 * {{Han ref|kx=0494.090|dkj=13870|dj=0859.030|hdz=21500.090|uh=6637|ud=26167}}
 
@@ -18,11 +20,13 @@
 |mc=
 |oc=y
 |ma=
-|cat=v
+|cat=
 }}
 
 ===Definitions===
-# to [[feed]] a [[prisoner]]
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
