--- a/en/坟/坟.13026.wikitext
+++ b/en/坟/坟.13026.wikitext
@@ -13,24 +13,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=|y=fan4|tra=墳}}
-
-# {{defn|lang=yue|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-fén.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|tra=墳|pin=[[fén]] ([[fen2]]), [[pàn]] ([[pan4]])|wg=fen<sup>2</sup>, p'an<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+==Chinese==
+{{zh-see|墳}}
 
 ----
 
