t+sd:[[گڏيل آمريڪي رياستون]] t+sd:[[يونائيٽيڊ سٽيٽس آف آميريڪا]] ([[WT:EDIT|Assisted]]) <United States of America#38617911>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -147,6 +147,7 @@
 *: Roman: {{t+|sh|Sjedinjene Američke Države|f-p}}, {{t+|sh|Amerika}}, {{t|sh|SAD|f-p}}
 * Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}
 * Silesian: {{t|szl|Stany Zjydnočůne Ameryki|m-p}}
+* Sindhi: {{t|sd|گڏيل آمريڪي رياستون|sc=sd-Arab}}, {{t|sd|يونائيٽيڊ سٽيٽس آف آميريڪا|sc=sd-Arab}}
 * Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය|sc=Sinh}}
 * Slovak: {{t|sk|Spojené Štáty Americké|m-p}}, {{t+|sk|USA}}
 * Slovene: {{t+|sl|Združene države Amerike|f-p}}, {{t|sl|Združene države|f-p}}, {{t+|sl|ZDA}}
